--- a/maven/jchempaint-application/pom.xml
+++ b/maven/jchempaint-application/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.openscience.cdk</groupId>
+    <groupId>org.openscience.jchempaint</groupId>
     <artifactId>jchempaint-all</artifactId>
-    <version>3.3-1206</version>
+    <version>3.3</version>
   </parent>
-  <groupId>org.openscience.cdk</groupId>
-  <artifactId>jchempaint</artifactId>
+  <groupId>org.openscience.jchempaint</groupId>
+  <artifactId>jchempaint-application</artifactId>
   <packaging>jar</packaging>
   <name>JChemPaint application with embedded dependencies</name> 
   <description>JChemPaint application</description>	 
