--- a/maven/jchempaint-nodeps/pom.xml
+++ b/maven/jchempaint-nodeps/pom.xml
@@ -2,11 +2,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.openscience.cdk</groupId>
+    <groupId>org.openscience.jchempaint</groupId>
     <artifactId>jchempaint-all</artifactId>
-    <version>3.3-1206</version>
+    <version>3.3</version>
   </parent>
-  <groupId>org.openscience.cdk</groupId>
+  <groupId>org.openscience.jchempaint</groupId>
   <artifactId>jchempaint-nodeps</artifactId>
   <packaging>jar</packaging>
   <name>JChemPaint application without embedded dependencies</name>
