--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.openscience.cdk</groupId>
+  <groupId>org.openscience.jchempaint</groupId>
   <artifactId>jchempaint-all</artifactId>
-  <version>3.3-1206</version>
+  <version>3.3</version>
   <packaging>pom</packaging>
 
   <name>JChemPaint releases</name>
@@ -67,13 +67,6 @@
    		<version>${cdk.version}</version>
    		<scope>compile</scope>
    	</dependency>    
-   	<!-- ??? is it still valid? -->
-   	<dependency>
-   		<groupId>org.openscience.cdk</groupId>
-   		<artifactId>cdk-nonotify</artifactId>
-   		<version>${cdk.version}</version>
-   		<scope>compile</scope>
-   	</dependency>    
    	<dependency>
    		<groupId>org.openscience.cdk</groupId>
    		<artifactId>cdk-qm</artifactId>
@@ -110,26 +103,44 @@
    		<version>${cdk.version}</version>
    		<scope>compile</scope>
    	</dependency>     	 	
+    	<dependency>
+   		<groupId>commons-cli</groupId>
+   		<artifactId>commons-cli</artifactId>
+   		<version>1.0</version>
+   		<scope>compile</scope>
+   	</dependency>     	 	
+   	<dependency>
+   		<groupId>org.iupac</groupId>
+   		<artifactId>inchi-nestedvm</artifactId>
+   		<version>1.0.2</version>
+   		<scope>compile</scope>
+   	</dependency>     	 	
    </dependencies>
-   <distributionManagement>
 
-    <snapshotRepository>
+  <repositories>
+    <repository>
   		<id>ambit-plovdiv-snapshots</id>
   		<url>http://ambit.uni-plovdiv.bg:8083/nexus/content/repositories/snapshots</url>
-	 </snapshotRepository>
-
-  <repository>
+	 </repository>
+    <repository>
         <id>ambit-plovdiv</id>
         <url>http://ambit.uni-plovdiv.bg:8083/nexus/content/repositories/thirdparty</url>
     </repository>
-  </distributionManagement>
-  <inceptionYear>1999</inceptionYear>
-
-  <repositories>
     <repository>
       <id>maven2-repository.dev.java.net</id>
       <name>Java.net Repository for Maven</name>
       <url>http://download.java.net/maven/2/</url>
+    </repository>
+    <repository>
+      <id>rwst-releases</id>
+      <releases>
+      	<enabled>true</enabled>
+      </releases>
+      <snapshots>
+      	<enabled>false</enabled>
+      </snapshots>
+      <name>JCP Repository for Maven</name>
+      <url>https://raw.github.com/rwst/mavenrepo/master/releases</url>
     </repository>
   </repositories>
 
@@ -144,17 +155,29 @@
   
     <modules>
     <module>jchempaint-application</module>
-  <!-- Not sure if it make sense to deploy an applet into a maven repo. 	
     <module>jchempaint-applet</module>
--->
     <module>jchempaint-nodeps</module>
    </modules>
 
   <properties>
-  	<cdk.version>1.4.11</cdk.version>
+  	<cdk.version>[1.4.6,1.5)</cdk.version>
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  
+  <build>
+    <sourceDirectory>../src/main</sourceDirectory>
+    <testSourceDirectory>../src/test</testSourceDirectory>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.5</source>
+          <target>1.5</target>
+	  <version>2.5.1</version>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
 
