--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -1,5 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <organization>
+  	<name>JChemPaint</name>
+  	<url>https://github.com/JChemPaint</url>
+  </organization>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.openscience.jchempaint</groupId>
   <artifactId>jchempaint-all</artifactId>
@@ -165,19 +169,20 @@
   </properties>
 
   <build>
-    <sourceDirectory>../src/main</sourceDirectory>
-    <testSourceDirectory>../src/test</testSourceDirectory>
+    <sourceDirectory>../../src/main</sourceDirectory>
+    <testSourceDirectory>../../src/test</testSourceDirectory>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+	<version>2.5.1</version>
         <configuration>
           <source>1.5</source>
           <target>1.5</target>
-	  <version>2.5.1</version>
         </configuration>
       </plugin>
     </plugins>
   </build>
+  
 </project>
 
