--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,6 @@ MANIFEST.MF
 build.xml
 po/
 po/classes/app/i18n/
+maven/jchempaint-applet/target/
+maven/jchempaint-application/target/
 maven/jchempaint-nodeps/target/
