--- a/maven/jchempaint-nodeps/pom.xml
+++ b/maven/jchempaint-nodeps/pom.xml
@@ -13,5 +13,16 @@
   
    <url>http://http://jchempaint.github.com</url>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <skipTests>true</skipTests>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
 
