--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -25,7 +25,25 @@
    	</dependency>
    	<dependency>
    		<groupId>org.openscience.cdk</groupId>
+   		<artifactId>cdk-annotation</artifactId>
+   		<version>${cdk.version}</version>
+   		<scope>compile</scope>
+   	</dependency>
+   	<dependency>
+   		<groupId>org.openscience.cdk</groupId>
+   		<artifactId>cdk-atomtype</artifactId>
+   		<version>${cdk.version}</version>
+   		<scope>compile</scope>
+   	</dependency>
+   	<dependency>
+   		<groupId>org.openscience.cdk</groupId>
    		<artifactId>cdk-data</artifactId>
+   		<version>${cdk.version}</version>
+   		<scope>compile</scope>
+   	</dependency>
+   	<dependency>
+   		<groupId>org.openscience.cdk</groupId>
+   		<artifactId>cdk-dict</artifactId>
    		<version>${cdk.version}</version>
    		<scope>compile</scope>
    	</dependency>
@@ -34,7 +52,7 @@
    		<artifactId>cdk-extra</artifactId>
    		<version>${cdk.version}</version>
    		<scope>compile</scope>
-   	</dependency>
+  	</dependency>
    	<dependency>
    		<groupId>org.openscience.cdk</groupId>
    		<artifactId>cdk-formula</artifactId>
@@ -73,12 +91,6 @@
    	</dependency>    
    	<dependency>
    		<groupId>org.openscience.cdk</groupId>
-   		<artifactId>cdk-qm</artifactId>
-   		<version>${cdk.version}</version>
-   		<scope>compile</scope>
-   	</dependency>    
-   	<dependency>
-   		<groupId>org.openscience.cdk</groupId>
    		<artifactId>cdk-reaction</artifactId>
    		<version>${cdk.version}</version>
    		<scope>compile</scope>
@@ -110,7 +122,7 @@
     	<dependency>
    		<groupId>commons-cli</groupId>
    		<artifactId>commons-cli</artifactId>
-   		<version>1.0</version>
+   		<version>[1.0,)</version>
    		<scope>compile</scope>
    	</dependency>     	 	
    	<dependency>
@@ -118,17 +130,23 @@
    		<artifactId>inchi-nestedvm</artifactId>
    		<version>1.0.2</version>
    		<scope>compile</scope>
-   	</dependency>     	 	
+   	</dependency> 	
+   	<dependency>
+   		<groupId>org.easytesting</groupId>
+   		<artifactId>fest-swing</artifactId>
+   		<version>1.2.1</version>
+   		<scope>test</scope>
+   	</dependency>
    </dependencies>
 
   <repositories>
     <repository>
-  		<id>ambit-plovdiv-snapshots</id>
-  		<url>http://ambit.uni-plovdiv.bg:8083/nexus/content/repositories/snapshots</url>
-	 </repository>
+      <id>ambit-plovdiv-snapshots</id>
+      <url>http://ambit.uni-plovdiv.bg:8083/nexus/content/repositories/snapshots</url>
+    </repository>
     <repository>
-        <id>ambit-plovdiv</id>
-        <url>http://ambit.uni-plovdiv.bg:8083/nexus/content/repositories/thirdparty</url>
+      <id>ambit-plovdiv</id>
+      <url>http://ambit.uni-plovdiv.bg:8083/nexus/content/repositories/thirdparty</url>
     </repository>
     <repository>
       <id>maven2-repository.dev.java.net</id>
@@ -164,12 +182,13 @@
    </modules>
 
   <properties>
-  	<cdk.version>[1.4.6,1.5)</cdk.version>
+  	<cdk.version>[1.4.6,1.4.13]</cdk.version>
 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <build>
     <sourceDirectory>../../src/main</sourceDirectory>
+    <!--resourceDirectory>../../src/main/org/openscience/jchempaint/resources</resourceDirectory-->
     <testSourceDirectory>../../src/test</testSourceDirectory>
     <plugins>
       <plugin>
@@ -179,10 +198,30 @@
         <configuration>
           <source>1.5</source>
           <target>1.5</target>
+	  <excludes>
+	    <exclude>../../src/util</exclude>
+	  </excludes>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.12.3</version>
+        <configuration>
+          <parallel>classes</parallel>
+          <forkMode>perthread</forkMode>
+          <threadCount>3</threadCount>
+          <perCoreThreadCount>false</perCoreThreadCount>
+        </configuration>
+	<dependencies>
+          <dependency>
+            <groupId>org.apache.maven.surefire</groupId>
+            <artifactId>surefire-junit47</artifactId>
+            <version>2.12.3</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
-  
 </project>
 
